# cube

./: .clang-format  .gitignore  CMakeLists.txt  CUBE_GLOO_GL_H.html  CubeConfig.cmake.in  Doxyfile  HTML.manifest  README.md  README_8md_source.html  WORKSPACE  annotated.html  attribute_8hpp_source.html  buffer_8hpp_source.html  classcube_1_1gloo_1_1attribute__base-members.html  classcube_1_1gloo_1_1attribute__base.html  classcube_1_1gloo_1_1basic__uniform__matrix-members.html  classcube_1_1gloo_1_1basic__uniform__matrix.html  classcube_1_1gloo_1_1basic__uniform__vector-members.html  classcube_1_1gloo_1_1basic__uniform__vector.html  classcube_1_1gloo_1_1element__index-members.html  classcube_1_1gloo_1_1element__index.html  classcube_1_1gloo_1_1fragment__shader-members.html  classcube_1_1gloo_1_1fragment__shader.html  classcube_1_1gloo_1_1globject-members.html  classcube_1_1gloo_1_1globject.html  classcube_1_1gloo_1_1program-members.html  classcube_1_1gloo_1_1program.html  classcube_1_1gloo_1_1program__inherit__graph.map  classcube_1_1gloo_1_1program__inherit__graph.md5  classcube_1_1gloo_1_1vertex__shader-members.html  classcube_1_1gloo_1_1vertex__shader.html  classcube_1_1gloo_1_1window-members.html  classcube_1_1gloo_1_1window.html  classcube_1_1gloo_1_1with__handle-members.html  classcube_1_1gloo_1_1with__handle.html  classcube_1_1gloo_1_1with__target-members.html  classcube_1_1gloo_1_1with__target.html  classes.html  classshape__strategy-members.html  classshape__strategy.html  (+103 more)
.github/workflows/: main.yaml
cmake/Modules/: FindBoostBook.cmake  FindBoostQuickbook.cmake  FindClangFormat.cmake  FindGLFW.cmake  FindScanBuild.cmake
cube/: BUILD  CMakeLists.txt  build.html  developers.html  examples.html  gloo.hpp  introduction.html  mat.hpp  mat_test.cpp  reference.html  references.html  variables.html
cube/gloo/: activate_all.html  attribute.cpp  attribute.hpp  attribute_base.html  basic_attribute.html  basic_uniform_matrix.html  basic_uniform_vector.html  buffer.cpp  buffer.hpp  buffer.html  deactivate_all.html  dispose_all.html  element_index.cpp  element_index.hpp  element_index.html  element_index_base.html  fragment_shader.html  globject.hpp  globject.html  globject_test.cpp  program.cpp  program.hpp  program.html  shader.cpp  shader.hpp  uniform.cpp  uniform.hpp  uniform_base.html  variable.hpp  vertex_shader.html  window.cpp  window.hpp  window.html  with_handle.html  with_target.html
cube/gloo/buffer/: buffer_view.html
cube/gloo/detail/: variable.hpp
cube/gloo/window/: strategy.html
doc/: CMakeLists.txt  Doxyfile.in  build.md  build.qbk  cube.qbk  developers.md  developers.qbk  examples.md  examples.qbk  introduction.md  introduction.qbk  preface.qbk  references.md  references.qbk  variables.qbk
doc/examples/: display_shape.md  display_shape.qbk
examples/: BUILD  CMakeLists.txt
examples/basic/: CMakeLists.txt  display_shape.cpp  display_shape_rawgl.cpp
examples/model_view_projection/: CMakeLists.txt  mvp.cpp
include/cube/: gloo.hpp
include/cube/gloo/: attribute.hpp  buffer.hpp  element_index.hpp  globject.hpp  opengl.hpp  program.hpp  shader.hpp  uniform.hpp  variable.hpp  window.hpp
include/cube/gloo/detail/: variable.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  groups_0.js  namespaces_0.js  pages_0.js  pages_1.js  pages_3.js  search.js  typedefs_0.js  typedefs_2.js
src/: CMakeLists.txt
src/gloo/: CMakeLists.txt  attribute.cpp  buffer.cpp  element_index.cpp  program.cpp  shader.cpp  uniform.cpp  window.cpp
test/: CMakeLists.txt  test_globject.cpp
tools/: mkdoc
